syntax = "proto2";
package message;

message aicontrol_toS 
{
	required string stateName = 1;
}

message aicontrol_toC 
{
	required string stateName = 1;
}
