syntax = "proto2";
package message;

message aicontrolchange_toS 
{
	
}

message aicontrolchange_toC 
{
	required string clientId = 1;
}
